Mon Mar 18 11:28:02 CET 2002 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htlib/HtDateTime.h: added the copy constructor
    * htnet/HtCookie.cc: fixed a NULL pointer bug regarding 'datestring' management
      and HtDateTime copy constructor is now used

Tue Mar 12 18:19:49 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/HtDateTime.cc (Parse, SetFTime): Added Parse method for
	more flexible parsing of LOOSE/SHORT formats, use it in SetFTime.
	Also skip unexpected leading spaces in SetFTime, as these frequently
	cause problems with some strptime() implementations.

Mon Feb 11 23:28:37 2002  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Retriever.h (got_redirect): Add referer to properly handle
	broken links through a redirect as reported by Joe Jah.

	* htdig/Retriever.cc: As above.

	* htdig/Document.cc (Retrieve): Fix bug that prevented external
	transport methods from reporting redirects as reported by Jamie
	Anstice <Jamie.Anstice@sli-systems.com>.
	
	* htlib/Dictionary.cc (hashCode): Trial of hash function suggested
	by Jamie Anstice.

Sat Feb  9 18:06:29 2002  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/DocMatch.[h,cc]: Add scoring code for the new htsearch
	framework.

Thu Feb  7 11:32:14 2002  Gabriele Bartolini <angusgb@users.sourceforge.net>

	* htnet/HtHTTP.cc (ReadChunkedBody): gets control of Read_Line
	methods (return error when they fail).

Fri Feb  1 17:12:31 2002  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* Merged htdig-3-2-x branch back into CVS mainline.

	* ChangeLog.0: Update with current 3.1.6 ChangeLog.

Thu Jan 24 18:06:04 2002  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* configure.in, aclocal.m4: Use new CHECK_SSL macro from the
	autoconf archive.

	* configure: Generate via autoconf.

Fri Jan 18 11:15:29 2002  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htnet/Transport.h (class Transport): Add const to SetCredentials
	method declaration as pointed out by Roman Maeder.
